# EmulationStation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GRIDTHEME.md  README.md  THEMES.md  msgfmt.sh  msginit.sh  xgettext.sh
.github/workflows/: win32.yml
Disable/: GuiGamelistOptions.cpp  Settings.cpp
data/: ResourceUtil.cpp  Resources.h
data/converted/: blank_game_png.cpp  folder_png.cpp
es-app/: CMakeLists.txt
es-app/src/: CollectionSystemManager.cpp  EmulationStation.h  EmulationStation.rc  FileData.cpp  FileData.h  FileFilterIndex.cpp  FileFilterIndex.h  FileSorts.cpp  FileSorts.h  Gamelist.cpp  MameNameMap.cpp  MetaData.cpp  MetaData.h  ScraperCmdLine.cpp  SystemData.cpp  SystemData.h  SystemScreenSaver.cpp  SystemScreenSaver.h  VolumeControl.cpp  VolumeControl.h  main.cpp
es-core/: CMakeLists.txt
es-core/src/: AnimationUtil.cpp  AnimationUtil.h  AudioManager.cpp  AudioManager.h  GuiComponent.cpp  GuiComponent.h  HelpStyle.cpp  HelpStyle.h  HttpReq.cpp  HttpReq.h  ImageIO.cpp  ImageIO.h  Input.cpp  Input.h  InputConfig.cpp  InputConfig.h  InputManager.cpp  LocaleES.cpp  LocaleES.h  Localization.h  Log.cpp  MameNames.h  (+18 more)
locale/: CMakeLists.txt  checkLocale.sh  emulationstation.pot
locale/fr/LC_MESSAGES/: emulationstation.mo  emulationstation.po
locale/lang/ca_ES/LC_MESSAGES/: emulationstation2.po
locale/lang/es/LC_MESSAGES/: emulationstation2.po
locale/lang/es_ES/LC_MESSAGES/: emulationstation2.po
locale/lang/fr/LC_MESSAGES/: emulationstation.po
locale/lang/pt_BR/LC_MESSAGES/: emulationstation2.po
resources/: mamebioses.xml  mamedevices.xml
(+136 files in other folders)
